#2548 Implemented issue requirements.